// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compose hooks action hook 1`] = `
[
  {
    "actions": [
      {
        "alias": "$action_0",
        "hook": {
          "args": [
            {
              "name": "name",
              "setter": {
                "kind": "reference-value",
                "target": {
                  "access": [
                    "name",
                  ],
                  "alias": "org",
                },
              },
            },
            {
              "name": "terms",
              "setter": {
                "fieldsetAccess": [
                  "termsOfUse",
                ],
                "kind": "fieldset-input",
                "required": false,
                "type": "boolean",
              },
            },
          ],
          "hook": {
            "file": "hooks.js",
            "kind": "source",
            "runtimeName": "MyRuntime",
            "target": "someHook",
          },
        },
        "kind": "execute-hook",
        "responds": false,
      },
    ],
    "authSelect": [],
    "authorize": undefined,
    "fieldset": {
      "kind": "record",
      "nullable": false,
      "record": {
        "termsOfUse": {
          "kind": "field",
          "nullable": false,
          "required": true,
          "type": "boolean",
          "validate": undefined,
        },
      },
    },
    "kind": "custom-one",
    "method": "POST",
    "parentContext": [],
    "path": "somePath",
    "responds": true,
    "response": undefined,
    "target": {
      "alias": "org",
      "identifyWith": {
        "paramName": "org_id",
        "path": [
          "id",
        ],
        "type": "integer",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
      "select": [
        {
          "alias": "name",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "Org",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
    },
  },
]
`;

exports[`compose hooks composes action hook 1`] = `
{
  "alias": "$action_0",
  "hook": {
    "args": [
      {
        "name": "user",
        "setter": {
          "kind": "query",
          "query": {
            "filter": {
              "args": [
                {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "id",
                  ],
                },
                {
                  "kind": "literal",
                  "literal": {
                    "kind": "integer",
                    "value": 1,
                  },
                },
              ],
              "kind": "function",
              "name": "is",
            },
            "fromPath": [
              "Org",
            ],
            "kind": "query",
            "limit": undefined,
            "modelRefKey": "Org",
            "name": "$query",
            "offset": undefined,
            "orderBy": undefined,
            "refKey": "N/A",
            "retCardinality": "collection",
            "retType": "Org",
            "select": [
              {
                "alias": "id",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "name",
                "expr": {
                  "kind": "alias",
                  "namePath": [
                    "Org",
                    "name",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "string",
                  "nullable": false,
                },
              },
            ],
          },
        },
      },
    ],
    "hook": {
      "file": "hooks/auth",
      "kind": "source",
      "runtimeName": "@GAUDI_INTERNAL",
      "target": "login",
    },
  },
  "kind": "execute-hook",
  "responds": false,
}
`;

exports[`compose hooks composes source hooks 1`] = `
{
  "actionHook": {
    "name": "name",
    "setter": {
      "args": [],
      "hook": {
        "file": "hooks.js",
        "kind": "source",
        "runtimeName": "MyRuntime",
        "target": "someHook",
      },
      "kind": "fieldset-hook",
    },
  },
  "modelHook": {
    "args": [],
    "hook": {
      "file": "githubc.js",
      "kind": "source",
      "runtimeName": "MyRuntime",
      "target": "someHook",
    },
    "kind": "model-hook",
    "name": "description",
    "refKey": "Org.description",
  },
  "validatorHook": {
    "hook": {
      "args": [
        {
          "expr": {
            "kind": "alias",
            "namePath": [
              "name",
            ],
          },
          "name": "name",
        },
      ],
      "hook": {
        "file": "githubc.js",
        "kind": "source",
        "runtimeName": "MyRuntime",
        "target": "someHook",
      },
    },
    "kind": "hook",
  },
}
`;

exports[`compose hooks defaults to the default execution runtime when hook runtime is empty 1`] = `
{
  "actions": [
    {
      "alias": "$action_0",
      "changeset": [
        {
          "name": "name",
          "setter": {
            "args": [],
            "hook": {
              "file": "hooks.js",
              "kind": "source",
              "runtimeName": "MyRuntime",
              "target": "randomSlug",
            },
            "kind": "fieldset-hook",
          },
        },
      ],
      "isPrimary": true,
      "kind": "create-one",
      "model": "Org",
      "select": [
        {
          "alias": "id",
          "expr": {
            "kind": "alias",
            "namePath": [
              "$action_0",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
      ],
      "targetPath": [
        "Org",
      ],
    },
  ],
  "authSelect": [],
  "authorize": undefined,
  "fieldset": undefined,
  "kind": "create",
  "parentContext": [],
  "response": [
    {
      "alias": "id",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "id",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "integer",
        "nullable": false,
      },
    },
    {
      "alias": "name",
      "expr": {
        "kind": "alias",
        "namePath": [
          "Org",
          "name",
        ],
      },
      "kind": "expression",
      "type": {
        "kind": "string",
        "nullable": false,
      },
    },
  ],
  "target": {
    "alias": "$target_0",
    "kind": "model",
    "name": "Org",
    "namePath": [
      "Org",
    ],
    "retType": "Org",
    "select": [
      {
        "alias": "id",
        "expr": {
          "kind": "alias",
          "namePath": [
            "Org",
            "id",
          ],
        },
        "kind": "expression",
        "type": {
          "kind": "integer",
          "nullable": false,
        },
      },
    ],
  },
}
`;

exports[`compose hooks inline hooks 1`] = `
{
  "actionHook": {
    "name": "name",
    "setter": {
      "args": [],
      "hook": {
        "inline": "'test name'",
        "kind": "inline",
      },
      "kind": "fieldset-hook",
    },
  },
  "modelHook": {
    "args": [],
    "hook": {
      "inline": "'some description'",
      "kind": "inline",
    },
    "kind": "model-hook",
    "name": "description",
    "refKey": "Org.description",
  },
  "validatorHook": {
    "hook": {
      "args": [
        {
          "expr": {
            "kind": "alias",
            "namePath": [
              "name",
            ],
          },
          "name": "name",
        },
      ],
      "hook": {
        "inline": "name === 'name'",
        "kind": "inline",
      },
    },
    "kind": "hook",
  },
}
`;
